force-app/main/default/objects/ARTL_Customer_Rate_Card__mdt/ARTL_Customer_Rate_Card__mdt.object-meta.xml
<CustomObject>
    <label>Customer Rate Card</label>
    <pluralLabel>Customer Rate Card</pluralLabel>
</CustomObject>