force-app/main/default/objects/ARTL_Customer_Rate_Card__mdt/fields/ARTL_Attribute_JSON__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Attribute_JSON__c</fullName>
    <label>Attribute JSON</label>
    <type>TextArea</type>
</CustomField>