force-app/main/default/objects/ARTL_Customer_Rate_Card__mdt/fields/ARTL_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Product_Code__c</fullName>
    <label>Product Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>