force-app/main/default/objects/ARTL_Customer_Rate_Card__mdt/listViews/CRC.listView-meta.xml
<ListView>
    <fullName>CRC</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>ARTL_Product_Name__c</columns>
    <columns>ARTL_Product_Code__c</columns>
    <columns>ARTL_Attribute_JSON__c</columns>
    <filterScope>Everything</filterScope>
    <label>CRC</label>
</ListView>